[tool.poetry]
name = "tripcraft"
version = "0.1.0"
description = ""
authors = ["Andy Chow <andychchow326@gmail.com>", "Emily Chan <emilychannn2002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.1"
isort = "^5.13.2"

[tool.isort]
profile = "black"
src_paths = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
